# ward-protocol

./: .env.example  .gitignore  AUDIT_REPORT.md  BRANDING.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  HIGH_ASSURANCE.md  INFRASTRUCTURE.md  INVARIANTS.md  LICENSE  MAINNET_READINESS.md  MULTICHAIN_GAPS.md  Procfile  README.md  REFACTOR.md  SECURITY.md  api.html  architecture.html  brand.html  checklist.html  conftest.py  dashboard.html  demo.html  discord_updates.txt  docs.html  e2e_altnet_test.py  hardhat.config.js  index.html  issue_credential_option3.py  main.py  main.py.backup  netlify.toml  next.config.js  next.config.mjs  package-lock.json  package.json  pyproject.toml  (+22 more)
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
api/: docs.py  domains.py  main.py
contracts/: MockERC20.sol  WardResolver.sol
contracts/interfaces/: IWardResolver.sol
contracts/test/: WardResolver.test.js
core/: __init__.py  auth.py  credential_checker.py  database.py  permissioned_domains.py  rate_limit.py  security_headers.py  xrpl_client.py
dashboard/: index.html
database/: schema.sql  setup_database.sh
database/migrations/: 003_permissioned_domains.sql
demo/: ward_demo.py
docs/: XLS-103d-specification-NEW.md  XLS-103d-specification-v1.0-backup.md  XLS-103d-specification.md  audit-report.md  audit-response.md  claims-audit.md  code4rena-scope.md  e2e_testnet_proof.md  flows.html  grant-application-draft.md  growth-history.md  high-assurance.md  index.html  institutional-defi-insurance-specification.md  institutional-readiness.md  mainnet-readiness.md  refactor.md  ward-integration-diagrams.md  xls-discussion-draft.md
docs-site/: index.html
docs/formal/: ward_validator.cfg  ward_validator.tla
docs/integration/: README.md  axelar.md  flare.md  hedera.md  phase2-flare.md  phase2-hedera.md  phase3-solana.md  phase4-stellar.md  solana.md  stellar.md  wormhole.md  xdc.md  xrpl-evm.md
docs/roadmap/: multichain.md  v0.3.md
docs/security/: adversarial-testing.md
docs/testnet/: algorand-testnet.md  flare-coston2.md  polygon-amoy.md  solana-devnet.md  stellar-testnet.md  xdc-apothem.md  xrpl-evm.md
docs/tools/: xrplf-explorer.md
docs/xls-spec/: README.md
public/: robots.txt  site.webmanifest  sitemap.xml
public/chain-logos/: xrpl-evm.avif
scripts/: check_signing_boundary.py  deploy-flare.js  deploy_testnet.py  setup_testnet_wallets.py  start_monitor.py  test-flare-e2e.js  view_pool_metrics.py  ward-algorand.js  ward-solana.js  ward-stellar.js
sdk/python/: README.md  client.py  get_pool.py  main.py  pyproject.toml  requirements.txt  setup.py
sdk/python/examples/: auto_claim_validator.py  calculate_premium.py  create_policy.py  monitor_defaults.py  monitor_with_database.py
sdk/python/tests/: test_api_route_alignment.py  test_sdk.py
sdk/python/ward/: database.py  escrow.py  monitor.py  payment.py  policy.py  pool.py  premium.py  validator.py
sdk/python/ward/models/: loan.py
sdk/python/ward_legacy/: README.md  escrow.py  monitor.py  premium.py  validator.py
sdk/python/ward_legacy/models/: __init__.py  loan_broker.py  vault.py
sdk/python/ward_legacy/utils/: calculations.py
sdk/python/ward_protocol_pkg/: __init__.py  client.py  models.py
sdk/typescript/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.ts  constants.ts  index.ts  monitor.ts  primitives.ts  settlement.ts  types.ts  validator.ts
sdk/typescript/tests/: client.test.ts  monitor.test.ts  primitives.test.ts  settlement.test.ts  validator.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/ward-health/: route.ts
src/app/assurance/: page.tsx
src/app/certified/: page.tsx
src/app/conformance/: page.tsx
src/app/dashboard/: DashboardClient.tsx  page.tsx
src/app/demo/: DemoClient.tsx  metadata.ts  page.tsx
src/app/docs/: page.tsx
src/app/privacy/: page.tsx
src/app/spec/: page.tsx
src/app/terms/: page.tsx
src/app/use-cases/: page.tsx
src/components/: AnimatedCounter.tsx  ChainLogo.tsx  ChainSelector.tsx  EnhancedWardChecklist.tsx  FadeUp.tsx  FlowRunner.tsx  Footer.tsx  HeroApiCard.tsx  HeroCard.tsx  InstallBlocks.tsx  LiveApiStatusCard.tsx  LiveValidator.tsx  MermaidDiagram.tsx  Nav.tsx  ValidationViz.tsx  WalletConnector.tsx  WardChecklist.tsx  WardMark.tsx
src/context/: WalletContext.tsx
src/hooks/: useWalletManager.ts
src/lib/: marketingContent.ts  navigation.ts  packageVersions.ts  wardMetrics.ts  wardPlatform.ts
src/types/: xrpl-connect.d.ts
starter/: README.md
starter/java/: pom.xml
starter/java/src/main/java/org/ward/: F01VaultRegistration.java  F02ClaimValidation.java  F03EscrowSettlement.java  WardConstants.java
starter/python/: 01_vault_registration.py  02_policy_purchase.py  03_vault_monitor.py  04_claim_validation.py  05_escrow_settlement.py  06_full_lifecycle.py  flows.py
starter/typescript/: 01-vault-registration.ts  02-vault-monitor.ts  03-escrow-settlement.ts  package-lock.json  package.json  tsconfig.json
tests/: __init__.py  conftest.py  e2e_altnet_test.py  test_api_endpoints.py  test_auth.py  test_coverage_gaps.py  test_credential_checker.py  test_database.py  test_database_extended.py  test_end_to_end.py  test_invariants_property.py  test_lifecycle.py  test_permissioned_domains.py  test_xls_integration.py  test_xrpl_client.py
ward/: Cargo.toml  __init__.py  _network.py  chain.py  chain_reader.py  client.py  constants.py  coverage.py  keys.py  monitor.py  pool.py  primitives.py  registry.py  resolver.py  settlement.py  tx_builder.py  validator.py  vault_monitor.py  webhooks.py
ward/adapters/: __init__.py  _config.py  axelar.py  flare.py  hedera.py  solana.py  stellar.py  wormhole.py  xdc.py
ward/src/: error.rs  escrow.rs  lib.rs  main.rs  monitor.rs
ward/tests/: escrow_test.rs  invariants_test.rs  monitor_test.rs
web/: index.html
