[package]
name        = "ward-protocol"
version     = "0.2.4"
edition     = "2021"
description = "Ward Protocol — default protection for XLS-66 lending vaults on XRPL"
license     = "MIT"
repository  = "https://wardprotocol.org"
keywords    = ["xrpl", "defi", "escrow", "default-protection", "xls-66"]

# ward_signed = false — this crate constructs unsigned XRPL transactions.
# The institution signs. XRPL settles. Ward never holds keys.

[[bin]]
name = "ward-monitor"
path = "src/main.rs"

[lib]
name = "ward"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio            = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tungstenite        = { version = "0.26" }
futures-util       = "0.3"

# HTTP / JSON-RPC
reqwest  = { version = "0.12", features = ["json", "native-tls"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptographic primitives (PREIMAGE-SHA-256 condition / fulfillment)
sha2 = "0.10"
hex  = "0.4"

# XRPL base58check address validation
bs58 = "0.5"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow    = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = 3
lto       = true
